# projectBd

./: CMakeLists.txt  README.md  mainwindow.ui
forms/: mainwindow.ui
googletest/: CMakeLists.txt  test_1.cpp
src/: connectpost.cpp  connectpost.h  mainwindow.cpp  mainwindow.h
tests/: CMakeLists.txt  example_add.cpp  example_subtract.cpp
